# spifyrfb-v2

./: Cargo.toml  LICENSE  README.md  bgr.py
daemons/: Cargo.toml
daemons/src/: lib.rs  main.rs
daemons/src/ipc_server/: event.rs  mod.rs
daemons/src/linux/: mod.rs
daemons/src/webapi/: mod.rs
daemons/src/windows/: ipc_server.rs  mod.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  main.rs
protocol/src/api/: mod.rs
protocol/src/server/: encoding_hextile.rs  encoding_raw.rs  encoding_tight.rs  encoding_trle.rs  encoding_zlib.rs  encoding_zrle.rs  ipc_client.rs  mod.rs  parser.rs  session.rs  websocket.rs
protocol/src/win32/: ipc_client.rs  keycodes.rs  mod.rs
protocol/src/x11/: keycodes.rs  mod.rs
src/: lib.rs  main.rs
src/server/: keycodes.rs  mod.rs
src/win32/: keycodes.rs  mod.rs  service.rs
src/x11/: keycodes.rs  mod.rs
