[package]
name = "spifyrfb"
filename = "SpifyRFB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
tokio = { version = "1", features = ["full"] }
x11rb = { version = "0.11.1", features = ["all-extensions"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services"
] }