[workspace]
members = [
    "protocol",
    "daemons"
]

[workspace.dependencies]
sha1 = "0.10.5"
rand = "0.8.5"
base64 = "0.21.2"
libz-sys = "1.1.9"
once_cell = "1.17.1"
tokio = { version = "1", features = ["full"] }
x11rb = { version = "0.11.1", features = ["all-extensions"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory"
] }