[workspace]
members = [
    "protocol",
    "daemons"
]

[workspace.dependencies]
des = "0.8.1"
png = "0.17.9"
sha1 = "0.10.5"
rand = "0.8.5"
base64 = "0.21.2"
rustls = "0.21.1"
libz-sys = "1.1.9"
once_cell = "1.17.1"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.2"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
tokio = { version = "1", features = ["full"] }
x11rb = { version = "0.11.1", features = ["all-extensions"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Shutdown"
] }