[package]
name = "spifyrfb-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde_json = "1.0.96"
tokio = { workspace = true }
windows = { workspace = true }
once_cell = { workspace = true }
spifyrfb-protocol = { path = "../protocol" }
serde = { version = "1.0.164", features = ["derive"] }