[package]
name = "spifyrfb-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
windows = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
spifyrfb-protocol = { path = "../protocol" }