[package]
name = "spifyrfb-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
x11rb = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
windows = { workspace = true }
libz-sys = { workspace = true }
once_cell = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }