[package]
name = "spifyrfb-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
des = { workspace = true }
png = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
x11rb = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
windows = { workspace = true }
libz-sys = { workspace = true }
once_cell = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }